@@ -90,7 +90,6 @@ class RNonHomogeneousTreeLikelihood :
 	protected:
 
 		mutable DRASRTreeLikelihoodData *_likelihoodData;
-    map<int, const Node *> _idToNode;
 
 	public:
     /**
